2012-12-14  Yufeng Zhang  <yufeng.zhang@arm.com>

	* libc/machine/aarch64/machine/_types.h: New file; define _ssize_t
	as long.

2012-12-11  Steve Ellcey  <sellcey@mips.com>

	* libc/machine/mips/memcpy.c: Remove.
	* libc/machine/mips/memcpy.S: New.
	* libc/machine/mips/Makefile.am (lib_a_CCASFLAGS): Add
	-D_COMPILING_NEWLIB.
	(lib_a_CFLAGS): Ditto.

2012-12-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* configure.host: Define libm_machine_dir value for arm.
	* libm/machine/configure.in: Add arm to libm machines list.
	* libm/machine/configure: Regenerate.
	* libm/machine/arm/Makefile.am: New file.
	* libm/machine/arm/Makefile.in: Generated.
	* libm/machine/arm/aclocal.m4: Generated.
	* libm/machine/arm/configure: Generated.
	* libm/machine/arm/configure.in: New file.
	* libm/machine/arm/s_ceil.c: Likewise.
	* libm/machine/arm/s_floor.c: Likewise.
	* libm/machine/arm/s_nearbyint.c: Likewise.
	* libm/machine/arm/s_rint.c: Likewise.
	* libm/machine/arm/s_round.c: Likewise.
	* libm/machine/arm/s_trunc.c: Likewise.
	* libm/machine/arm/sf_ceil.c: Likewise.
	* libm/machine/arm/sf_floor.c: Likewise.
	* libm/machine/arm/sf_nearbyint.c: Likewise.
	* libm/machine/arm/sf_rint.c: Likewise.
	* libm/machine/arm/sf_round.c: Likewise.
	* libm/machine/arm/sf_trunc.c: Likewise.

2012-11-30  Greta Yorsh  <Greta.Yorsh@arm.com>

	* libc/machine/arm/strcmp.S (compute_return_value): Fix return value.
	* testsuite/newlib.string/strcmp-1.c (main): Add new test cases.

2012-11-29  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/sys/reent.h (__sFILE): Change type of _offset
	from int to _off_t.
	* libc/stdio/ftell.c: Use _ftello_r().
	* libc/stdio/ftello.c: Copy implementation from previous
	_ftell_r().
	* libc/stdio/fseek.c: Use _fseeko_r().
	* libc/stdio/fseeko.c: Copy implementation from previous
	_fseek_r().

2012-11-26  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/inttypes.h: Add and use __INTTYPES_EXP().
