@@ -1,3 +1,8 @@
+2012-12-17  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libc/stdio/puts.c: Add fp locking and use _stdout_r macro
+	to refer to the stream rather than stdout.
+
 2012-12-14  Yufeng Zhang  <yufeng.zhang@arm.com>
 
 	* libc/machine/aarch64/machine/_types.h: New file; define _ssize_t
